refactor: adapt password changing routes
